# CMake-usecases

./: .gitignore  Inversions.pptx  README.md  cmake_intro.pptx
docs/: README.md
source_code/: .gitignore  README.md
source_code/ctest/: .gitignore  README.md
source_code/ctest/failing/: CMakeLists.txt  README.md  compute.c  segfault.c  test_wrapper.sh
source_code/ctest/google_test/: CMakeLists.txt
source_code/ctest/simple/: README.md
source_code/cuda/: README.md
source_code/cython/: CMakeLists.txt  README.md  environment.yml
source_code/env_file/: CMakeLists.txt  README.md
source_code/mpi/: CMakeLists.txt
source_code/python-venv/: .gitignore  avg  data.csv
source_code/python_venv/: CMakeLists.txt  README.md  avg.py
source_code/rpath/: CMakeLists.txt  README.md  context1.c  context1.h  context2.c  context2.h  global.c  global.h  main.c
source_code/static_boost/: CMakeLists.txt
source_code/templates/: CMakeLists.txt  README.md
source_code/templates/scripts/: CMakeLists.txt  bye.py  hello.py
source_code/templates/scripts/utils/: messages.py
source_code/templates/tmpl/: run.tmpl
